# ChangeLog for net-dns/dnssec-check
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-dns/dnssec-check/ChangeLog,v 1.5 2012/10/15 06:10:46 xmw Exp $

*dnssec-check-1.14 (15 Oct 2012)

  15 Oct 2012; Michael Weber <xmw@gentoo.org> +dnssec-check-1.14.ebuild,
  +files/dnssec-check-1.14-mainwindow.patch:
  Version bump (euscan)

  09 Jul 2012; Michael Weber <xmw@gentoo.org> -dnssec-check-1.12.3-r1.ebuild:
  Drop old

*dnssec-check-1.13 (23 Jun 2012)

  23 Jun 2012; Michael Weber <xmw@gentoo.org> +dnssec-check-1.13.ebuild:
  Version bump

*dnssec-check-1.12.3-r1 (23 Jun 2012)

  23 Jun 2012; Michael Weber <xmw@gentoo.org> -dnssec-check-1.12.3.ebuild,
  +dnssec-check-1.12.3-r1.ebuild:
  Fix dependency net-dns/dnssec-tools[threads] (bug 421713, thanks Diego Elio
  Pettenò)

*dnssec-check-1.12.3 (22 May 2012)

  22 May 2012; Michael Weber <xmw@gentoo.org> +dnssec-check-1.12.3.ebuild,
  +metadata.xml:
  Initial import