@@ -3,15 +3,17 @@ Hash: SHA256
 
 AUX dnssec-check-1.14-mainwindow.patch 347 SHA256 cb152fcbb98285ea2c29f36f0007f9a17621c2615891f64bfd75eb833bd3b3a2 SHA512 248ace4033f8ea9302e911fe6e6dc715d0b2541c1b5ae77e50586d2ea76ffb8075c662eec2b18ae8b4d9749f88d7597e8f3f722957cb6aec5c07f732e7c6dbd5 WHIRLPOOL 4abcfbf9e3ef884a11e56655faf83e78a2e66d241d1da202a7d7742c29a641e6725bddbeb5739281beb60261d3b108a03ce7982e946ad919cfb5aff8466a7546
 DIST dnssec-check-1.13.tar.gz 174175 SHA256 1c1d751aa39007736708930599b72236fc3abf2341e679cf1b44bf6a6395422b SHA512 452a312beba826a301800c678e00adb50188cba32008eb22fafd1044a922477ea2d399f4bf07057c839ffbd3057707081b5eec72eadbd1c41ced0c36168f24e6 WHIRLPOOL 5d4682ee59f4a203afaed7750bc1b98b6d627d5ad9ad5a5f771b818e0be1ba1f130853322e0fdd5686c21b44dd04272b1d3379e9f80297478d3bb67df31d549c
+DIST dnssec-check-1.14.0.1.tar.gz 174770 SHA256 28a02a7dd36eb49b8106520ab1ec3e14b8dddcccb3ed36e1d6a70fb12fe57418 SHA512 2902918f2452bc588332580c3cfa637854aa5791c9d72d8f928471a9baae7ad46b6b1d0b34099cca1ec43a5e7f426493a20df4414d8150f614775e245135dd9f WHIRLPOOL 6d59d0865c733065da2c600fde6275ecce1af0ccf245dd37e8622c5664cc35d9e0ab462aaf7c2d0ca9d666ec7f2ed2fb0a3e14f49d6de864cfd0e5527e217b87
 DIST dnssec-check-1.14.tar.gz 174645 SHA256 cb2d30484140105f745bc0fdb57d77408a419e9dd59ad5f721742eec36bf1566 SHA512 08ec062d8d24dfb602277279237ea8d591384c34c16617d11bdb512e948e08a851b4016bcc024bce8440038c116e8688de041d5a04ab92b054526a558a05601c WHIRLPOOL 51fad9a4a4b581e1f82e7f815c32317a8d5564c4f920459692199cf9dacba8ab870c9b4586bc7315368979bbee721435a6b755174f932602e261b642863d285e
 EBUILD dnssec-check-1.13.ebuild 796 SHA256 f18103034b3429c7b8d0558379360c3622bcade0986204094a49d073846fa22a SHA512 5c6b841cf0d24bc6769ab135df02c718c34287e5840ce5162c835b270abbe91a72e20e5201db9da66d3e531eed0d2af4ee7f441ba4c0fc62f43357f2cdc1d65e WHIRLPOOL a8977879994d3502803dd6fcd4368cc35eb8418ad58045d50b12e094d22f392993e6c990cf73ad70703a363c154f524a74f32d0921947e90b813ec5a6b24e5bf
+EBUILD dnssec-check-1.14.0.1.ebuild 807 SHA256 b82a0e97056b8993b66689e564ef6c5b07faeb153f0f9dba2e0c62956f174747 SHA512 7bdf5b28488b07900b669050df41ed38ba9cf8fcf647ed6f17da5474fd38d8a4931f4cf1fc104bc8b9a780ebb2eac309cf167092d02f8354f05cec6805774744 WHIRLPOOL b9b450a89b359538c43ec4d532e208a6e819702aa31fc341643e1913ec61d2ebedf1bfaed11ba9f225b529a79478879a8fa53d02bdb5247484b57b3c981303e4
 EBUILD dnssec-check-1.14.ebuild 848 SHA256 3d6f100954682c3969209e306e984cac761ec3175364a1b40ce24703a1fd933b SHA512 84404cecd736bf2c2bbe5dc1c1b08a6e94a754a00d711f7e0e9e9062be341722158e784c035ab7fafca8d6e12b6a38dbaf18663e8ac9585d0bb5a1bb396477ae WHIRLPOOL 721c55759c0eda22440fbf56520d796dc3c775e674eb2362ac5cd01d5eb6119374b0eba4b16936b9d53683863bb54e7c02254d3734122a48764086b554bde5dc
-MISC ChangeLog 984 SHA256 2f26d6ef12b6919044d4c71fe7a056cbd6a4a9f78eb983665f45bfd4b6795fc6 SHA512 75c16e551b05d9c03f31f82990858cdad7a08ad86c87392c1d531e711512dace67704136515d26f485f7616bf9529d6dec8f3b4b4a637549ec20ce69ba09b424 WHIRLPOOL 8c752615403a804d6ffb62c6f0fad7099938a7647926b26eabb74c93b11ed6d2823ace7337f676691dae8c453b9f17c008c570c88a52a62fa37352d0469d9b04
+MISC ChangeLog 1143 SHA256 a3f4214380249c01777eb5e98e0f30a4ccb982599088fc454452e1092f80b9f9 SHA512 9e1aaaf53e39ba06bc9b140d8446f38974f68725430fccc149713dfd4ff5be68720322310d381c0faef46dd23f0f3b90e1ad5ee45f62808bc9d1d14e37d07872 WHIRLPOOL 671d6d3e3c4998063165001f7a0465585e6224ed0038af28027b3d7ccbb1c80e527497b434897b2da650c8ca327ef07f1a54ea35396aeb775dac0f4e00a6ade3
 MISC metadata.xml 224 SHA256 f810c6de744adceee241992d3f713142db3e7025986f6cc5898cfe3c9cb2f4a7 SHA512 4f78d959809ec0db2f9be2a7747d572fa8ee03d177044dd46574881a6ee83736510b76062c12daecae609282d197ba466e8a3e3a654b1383e04c659acd41bef5 WHIRLPOOL 0300a228d371c918b051bc24859dfe4e5d0d2a71b80f697f202749c5aca69efcee4be6e69454c9abfa4ced28e19a9d1f71d6d7eaf54290b8d03b5c04fd209868
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iF4EAREIAAYFAlB7qQgACgkQknrdDGLu8JCyNQD/fE0Ue411FygTKMSzUPKY9bYH
-h8VIdtckDBQ/hynY5YoBAJACQrrsSeyae+2bkg106zbD6pcZzJJH8gttZ4fg3iDl
-=h6JL
+iF4EAREIAAYFAlCWraQACgkQknrdDGLu8JDi5QD/d8r3p6uc4ck66WiCsQ2hTQnH
+qq7FQbW/MXSsaMWpSM8A/jirvZfIqsEMUgcDdKeywq9KFZq8qBaquanObodo7Tf2
+=5XJ+
 -----END PGP SIGNATURE-----
